[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Gameplay/Missile.tscn" type="PackedScene" id=2]
[ext_resource path="res://Gameplay/player_anim.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/sounds/weaponshot.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/sounds/tookHit.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Particles/explosion.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/playershadow.png" type="Texture" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.4805
height = 77.556

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )
MissileScene = ExtResource( 2 )

[node name="player_anim" parent="." instance=ExtResource( 3 )]
scale = Vector2( 1, 1 )

[node name="r_arm" parent="player_anim" index="0"]
position = Vector2( -19.3847, -34.4458 )
rotation = 2.96943

[node name="l_arm" parent="player_anim/waist/torso" index="1"]
rotation = 0.165786

[node name="end" parent="player_anim/waist/torso/l_arm" index="0"]
rotation = -0.158027

[node name="Remote_r_arm" parent="player_anim/waist/torso" index="2"]
rotation = 2.96943

[node name="end" parent="player_anim/waist/torso/Remote_r_arm" index="0"]
rotation = -3.54946

[node name="l_leg" parent="player_anim/waist" index="1"]
position = Vector2( 3.28562, -0.670525 )

[node name="r_leg" parent="player_anim/waist" index="2"]
position = Vector2( -8.30589, 0.128899 )

[node name="weapon" parent="player_anim" index="2"]
rotation = 1.5071

[node name="playershadow" type="Sprite" parent="player_anim"]
position = Vector2( 1.42326, 35.5609 )
texture = ExtResource( 10 )

[node name="aim" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 70, 0 )
collide_with_bodies = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.702698, -11.1442 )
shape = SubResource( 1 )

[node name="fireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "firesound1"

[node name="tookHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="explosion" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -34.035 )
scale = Vector2( 2.5, 3.5 )

[editable path="player_anim"]
